--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -4,7 +4,70 @@
 
 
 
+.comparison-section {
+  padding: 2rem 1rem;
+  max-width: 1000px;
+  margin: auto;
+}
 
+.section-heading {
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.comparison-table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 1px solid black;
+  font-size: 1rem;
+}
+
+.comparison-table th,
+.comparison-table td {
+  border: 1px solid black;
+  padding: 12px 15px;
+  text-align: left;
+}
+
+.comparison-table th {
+  font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .comparison-table thead {
+    display: none;
+  }
+
+  .comparison-table, 
+  .comparison-table tbody, 
+  .comparison-table tr, 
+  .comparison-table td {
+    display: block;
+    width: 100%;
+  }
+
+  .comparison-table tr {
+    margin-bottom: 1rem;
+    border: 1px solid black;
+    padding: 10px;
+  }
+
+  .comparison-table td {
+    text-align: right;
+    padding-left: 50%;
+    position: relative;
+  }
+
+  .comparison-table td::before {
+    content: attr(data-label);
+    position: absolute;
+    left: 15px;
+    width: 45%;
+    text-align: left;
+    font-weight: bold;
+  }
+}
 
 
 /* General Styles */
