--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -327,7 +327,7 @@ body {
 .case-studies {
   padding: 80px 20px;
   background-color: #ffffff;
-  text-align: center;
+  text-align: justify;
 }
 
 .case-heading {
@@ -350,7 +350,7 @@ body {
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
   max-width: 320px;
   padding: 24px;
-  text-align: left;
+  text-align: justify;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -366,10 +366,13 @@ body {
 }
 
 .case-description {
-  font-size: 0.9rem;
+  
   color: #555;
   line-height: 1.6;
   text-align: justify !important;
+}
+.case-study-item p{
+  font-size: 0.68rem;
 }
 
 /* Responsive Updates */
@@ -379,6 +382,10 @@ body {
     flex-direction: column;
     align-items: center;
   }
+.case-study-item p{
+  font-size: 0.58rem;
+}
+
 
   .blog-card,
   .case-card {
