--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -331,7 +331,7 @@ body {
 }
 
 .case-heading {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 700;
   color: #222;
   margin-bottom: 30px;
@@ -359,7 +359,7 @@ body {
 }
 
 .case-title {
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   font-weight: 600;
   color: #333;
   margin-bottom: 10px;
@@ -384,6 +384,12 @@ body {
   }
 .case-study-item p{
   font-size: 0.58rem;
+}
+.case-title {
+  font-size: 0.7rem;
+  font-weight: 500;
+  color: #333;
+  margin-bottom: 10px;
 }
 
 
