--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -391,8 +391,8 @@ body {
   color: #333;
   margin-bottom: 10px;
 }
-.case-heading {
-  font-size: 0.8rem;
+.section-heading {
+  font-size: 0.8rem !important;
   font-weight: 600;
   color: #222;
   margin-bottom: 30px;
